Generic logic to manage the original word as a replacement suggestion for all replacement types